# mvx-onchain-proof

./: CHANGELOG.md  DEVELOPMENT.md  README.md
.github/workflows/: ci.yml
contract/: Cargo.toml
contract/src/: lib.rs
contract/tests/: integration_test.rs  integration_tests.rs
deploy-scripts/: deploy-devnet.sh
frontend-example/: index.html
frontend-modern/: package.json
frontend-modern/src/: App.tsx
frontend-modern/src/components/: Dashboard.tsx  ProofCard.tsx
frontend-modern/src/services/: contractService.ts  walletService.ts
frontend-modern/src/types/: proof.ts
frontend-modern/src/utils/: contractService.ts
