[package]
name = "onchain-proof"
version = "0.3.0"
authors = ["George Pricop <pricopgeorge@gmail.com>"]
description = "Universal smart contract for blockchain badges, certificates and attestations on MultiversX - Multi-proof support with metadata"
edition = "2021"
license = "MIT"
repository = "https://github.com/Gzeu/mvx-onchain-proof"
homepage = "https://github.com/Gzeu/mvx-onchain-proof"
documentation = "https://github.com/Gzeu/mvx-onchain-proof#readme"
keywords = ["blockchain", "certificate", "badge", "attestation", "multiversx"]
categories = ["cryptography", "web-programming"]
readme = "../README.md"
include = [
    "src/**/*",
    "Cargo.toml",
    "meta/**/*"
]

[lib]
crate-type = ["cdylib"]

[dependencies]
multiversx-sc = "0.53.2"

[dev-dependencies]
multiversx-sc-scenario = "0.53.2"
multiversx-chain-vm = "0.9.2"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
panic = "abort"
overflow-checks = false
strip = true

[[bin]]
name = "onchain-proof-meta"
path = "meta/src/main.rs"